# Composio_Agent_Builder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api_client.py  app.py  docker-compose.yml  langgraph.json  output_system_prompt.txt  pyproject.toml  styles.css  test.py
.github/workflows/: linting.yaml
agent_builder/: __init__.py  graph.py  prompts.py
agent_template/: __init__.py  graph.py  tools.py
backend/: Dockerfile  langgraph.json  main.py  pyproject.toml  utils.py
backend/agents/agent_builder/: __init__.py  graph.py  models.py  prompts.py  state.py
backend/agents/agent_template/: __init__.py  context.py  graph.py  tools.py  utils.py
backend/api/: __init__.py  assistant_routes.py  chat_routes.py  composio_routes.py  cron_routes.py
backend/core/: config.py  database.py  orm.py  sse.py  tool_router.py
backend/default_agents/: Company_Insights__News_Tracker.json  github_prs_summarizer.json  recruiter_copilot.json
backend/misc/: models.py  setup_logging.py  utils.py
backend/services/: broker.py  cron_service.py  event_store.py  langgraph_service.py  seed_agents.py  streaming_service.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
pages/: agent_builder.py  assistants.py
react_agent/: context.py  graph.py
src/: main.py  utils.py
src/api/: assistant_routes.py  chat_routes.py
src/core/: database.py  orm.py  sse.py
src/misc/: models.py  utils.py
src/services/: broker.py  event_store.py  (+2 more)
template_agent/: __init__.py  graph.py
(+6 files in other folders)
