[project]
name = "composio-hack"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "composio>=0.8.20",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph>=0.6.10",
]
