[project]
name = "composio-hack"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.*"
dependencies = [
    "apscheduler>=3.11.0",
    "composio>=0.8.20",
    "croniter>=6.0.0",
    "db-sqlite3>=0.0.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pre-commit>=4.3.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "structlog>=25.4.0",
]
